fix flicker effect

--- a/pages/index/main.module.scss
+++ b/pages/index/main.module.scss
@@ -155,6 +155,7 @@
     padding: 0 46px;
     display: flex;
     flex: 1;
+    width: 912px;
 
     @include respond-to(large) {
       width: 912px;
